--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ pluginId=com.julienphalip.ideavim.functiontextobj
 pluginName=Vim FunctionTextObj
 pluginVersion=1.0.0
 pluginSinceBuild=241
-platformType=IU
-platformVersion=2024.1.1
+platformType=IC
+platformVersion=2024.2.1
 platformBundledPlugins=
-platformPlugins=IdeaVIM:2.16.0
+platformPlugins=IdeaVIM:2.17.0
