--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 .gradle
+.kotlin
 build/
+**/src/test/tmpFiles
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+### Test artifacts ###
+allure-results/*
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
