--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ pluginId=com.julienphalip.ideavim.functiontextobj
 pluginName=Vim FunctionTextObj
 pluginVersion=1.2.0
 pluginSinceBuild=250
-platformType=IC
+platformType=IU
 platformVersion=2025.2.5
 platformBundledPlugins=
 platformPlugins=IdeaVIM:2.27.2
